@@ -11,6 +11,7 @@ export(findFocal)
 export(readCurationFile)
 export(calculatePowerDetectSomatic)
 export(calculateBamCoverageByInterval)
+export(calculateGCContentByInterval)
 export(createCurationFile)
 export(createNormalDatabase)
 export(createSNPBlacklist)
@@ -28,7 +29,7 @@ importFrom("RColorBrewer", "brewer.pal")
 importFrom("GenomeInfoDb", "seqnames")
 importFrom("GenomicRanges", "GRanges")
 importFrom("SummarizedExperiment", "rowRanges")
-importFrom("Rsamtools", "ScanBamParam", "scanBamFlag", "scanBam")
+importFrom("Rsamtools", "ScanBamParam", "scanBamFlag", "scanBam", "scanFa")
 import(IRanges)
 importFrom("S4Vectors", "queryHits", "subjectHits")
 importFrom("grDevices", "colorRampPalette", "dev.off", "png")
