@@ -1,0 +1,6 @@
+Target
+seq1:101-250
+seq1:301-650
+seq2:1-150
+seq2:401-550
+seq2:701-750
