@@ -2,6 +2,7 @@
     - added calculatePowerDetectSomatic
     - added getSexFromVcf
     - added calculateBamCoverageByInterval
+    - added calculateGCContentByInterval
 
 1.0
     - added correctCoverageBias
